jaegar/istio-jaegar.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: jaegarexample
  name: jaegarexample
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: jaegarexample
    spec:
      containers:
      - image: bjd145/whatos-jaegar:1.2
        imagePullPolicy: Always
        name: jaegarexample
        ports:
        - containerPort: 8081
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: jaegarexample
  labels:
    app: jaegarexample
spec:
  type: NodePort
  ports:
  - port: 8081
    targetPort: 8081
    name: http
  selector:
    app: jaegarexample
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: whatosistio-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
       number: 443
       name: https
       protocol: HTTPS
    tls:
      mode: SIMPLE
      serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
      privateKey: /etc/istio/ingressgateway-certs/tls.key
    hosts:
     - "whatos.denicolafamily.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: whatosistio
spec:
  hosts:
  - "whatos.denicolafamily.com"
  gateways:
  - whatosistio-gateway
  http:
  - match:
    - uri:
        exact: /api/os
    route:
    - destination:
        host: whatosistio
        port:
          number: 8081
  - match:
    - uri:
        exact: /api/jaegar
    route:
    - destination:
        host: jaegarexample
        port:
          number: 8081
